<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar3_hardware_drivers</name>
  <version>0.0.0</version>
  <description>The ar3_hardware_drivers package</description>

  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>

  <license>MIT</license>

  <author email="dexterong94@gmail.com">Dexter Ong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
